# aoc2022-python

./: .gitignore  .pre-commit-config.yaml  DEVELOP.md  Justfile  README.md  SETUP.md  pyproject.toml
.github/workflows/: python-check.yml
src/mysolution/: day01.py  day02.py  day03.py  day04.py  day05.py  day07.py
src/mysolution/helpers/: cli.py
