[project]
name = "Advent of Code 2022 Solutions"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.11"
license = "Apache-2.0"

[[project.authors]]
name = "Abhabongse Janthong"
email = "6845502+abhabongse@users.noreply.github.com"

[tool.poetry]
# Duplicated from [project] section because poetry has not yet supported
name = "aoc2022-solutions"
version = "0.1.0"
description = ""
readme = "README.md"
license = "Apache-2.0"
authors = ["Abhabongse Janthong <6845502+abhabongse@users.noreply.github.com>"]

[[tool.poetry.packages]]
include = "mysolution"
from = "src"

[tool.poetry.dependencies]
python = "^3.11"
click = "^8.1.3"
more-itertools = "^9.0.0"
python-dotenv = "^0.21.0"
rich = "^12.5.1"
structlog = "^22.1.0"
tomli = "^2.0.1"
tqdm = "^4.64.1"
typing-extensions = "^4.4.0"

[tool.poetry.group.dev.dependencies]
coverage = "^6.4.4"
flake8 = "^5.0.4"
flake8-bugbear = "^22.9.11"
flake8-commas = "^2.1.0"
flake8-import-order = "^0.18.1"
jupyterlab = "^3.4.6"
pycodestyle = "^2.9.1"
pyflakes = "^2.5.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
